--- a/parentchild/src/app/app.component.html
+++ b/parentchild/src/app/app.component.html
@@ -35,3 +35,4 @@
 <app-about (sendData)="sendData($event)"></app-about>
 </div>
 <!-- binding between parent qnd child -->
+ <app-pro-parent></app-pro-parent>
